made canvas restart after checking percentage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="bkMiniGame">
         <canvas id="canvas"></canvas>
-        <button onclick="checkFiled()">hi smile</button>
+        <button onclick="checkFiled()">Check percentage</button>
+        <p style="color: white;" id="MGDisplayPrc"></p>
     </div>
 
     <h1>PAINting</h1>
