doing some testing, made a trail that follows the y of ball

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p style="color: white;" id="MGDisplayPrc"></p>
     </div>
 
-    <h1>PAINting</h1>
+    <h1 style="margin: 0;">PAINting</h1>
 
     <p>Penger: <span id="money">40</span>kr</p>
 
