--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
     <title>Document</title>
 </head>
 <body>
-    <div id="bkMiniGame">
-        <canvas id="canvas"></canvas>
-        <button onclick="checkFiled()">Check percentage</button>
-        <p style="color: white;" id="MGDisplayPrc"></p>
+    <div id="darkBk">
+        <div id="introColor">
+            <div id="colorPicker"></div>
+            <button onclick="confirmColor()">confirm</button>
+            <p id="errorColor"></p>
+        </div>
+
+        <div id="miniGame">
+            <canvas id="canvas"></canvas>
+            <button onclick="checkFiled()">Check percentage</button>
+            <p style="color: white;" id="MGDisplayPrc"></p>
+        </div>
     </div>
 
     <h1 style="margin: 0;">PAINting</h1>
@@ -24,14 +33,14 @@
     </div>
 
     <button onclick="intMG()">Mini Game</button>
+    <button onclick="introPickColor()">Color Picker</button>
 
-    <button onclick="testPaint()">test</button>
     <a href="testing.html">testing html</a>
 
 
     <canvas style="position: absolute; z-index: -2; left: 0; top: 0;" id="bkCanvas"></canvas>
     <div id="paintBall">.</div>
-    <button style="display: flex; justify-content: baseline;" onclick="dripPaint()">test paint drip</button>
+    <button style="position: absolute; bottom: 0; right: 0;" onclick="dripPaint()">test paint drip</button>
     <script src="js/script.js"></script>
     <script src="js/canvas.js"></script>
 </body>
