--- a/testing.html
+++ b/testing.html
@@ -3,239 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clone Animation</title>
     <style>
-        :root {
-            --animationSpeed: 4s
-        }
-
-        @keyframes fallingPaint {
-            0% {top: -50px;}
-            100% {top: 110%;}
-        }
-
-        /* @keyframes trailPaint {
-            to {top: 140%; opacity: 0;}
-        } */
-
-        body {
+        body{
             overflow: hidden;
         }
 
-        #paintBall {
+        .parabola {
+            width: 200px;
+            height: 300px;
+            top: 80px;
+            background-color: lightblue;
             position: absolute;
-            top: -50px;
-            width: 40px;
-            height: 40px;
-            color: red;
             border-radius: 50%;
-            background-color: red;
+            animation: wave 10s ease-in-out infinite;
         }
 
-        /* .trail {
-            position: absolute;
-            width: 40px;
-            height: 40px;
-            color: red;
-            border-radius: 50%;
-            background-color: red;
-            opacity: 1;
-            animation: trailPaint 4s forwards;
+        .clones-container {
+            position: relative;
         }
 
-        #trailContainer {
+        .cloned-parabola {
             position: absolute;
-            left: 300px;
-            height: 100%;
-        } */
+            top: 80px; /* Set the desired vertical position */
+        }
 
-        .dripAni {
-            animation: fallingPaint var(--animationSpeed);
+        @keyframes wave {
+            from {
+                margin-left: -100px;
+            }
+            to {
+                margin-left: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <canvas style="position: absolute; z-index: -1; left: 0; top: 0;" id="bkCanvas"></canvas>
-    <div id="paintBall">.</div>
+    <div style="width: 100px;">
+        <div class="parabola" id="move"></div>
+        <div class="clones-container"></div>
+    </div>
 
-    <button onclick="testPaint()">test</button>
-
-    <a href="index.html">back</a>
-
+    <div style="width: 100%; background-color: lightblue; height: 100%; position: absolute; top: 100px;">.</div>
 
     <script>
-        const dripColor = "red"
-        let readyForDrip = true
+        function test() {
+            const originalParabola = document.getElementById("move");
+            const clonesContainer = document.querySelector(".clones-container");
 
-        const bkCanvas = document.getElementById("bkCanvas")
+            // Create a new cloned element
+            const clonedParabola = originalParabola.cloneNode(true);
+            clonedParabola.id = ""; // Remove the ID to avoid duplicate IDs
+            clonedParabola.classList.add("cloned-parabola"); // Add a class for styling
+            clonesContainer.appendChild(clonedParabola); // Append the cloned element to the container
 
-        bkCanvas.width = window.innerWidth
-        bkCanvas.height = window.innerHeight
-
-        let context = bkCanvas.getContext("2d")
-        context.fillStyle = "white"
-        context.fillRect(0, 0, bkCanvas.width, bkCanvas.height)
-
-        let trailWidth = 35
-
-
-        function dripPaint() {
-            let fadeOpacity
-            let randomX
-            let dripSpeed = 4
-            let trailUpdates = dripSpeed * 1000 / 20
-
-            if (readyForDrip) {
-                const paintBall = document.getElementById("paintBall")
-                randomX = Math.floor(Math.random() * window.innerWidth)
-
-                document.documentElement.style.setProperty("--animationSpeed", `${dripSpeed}s`)
-                paintBall.style.left = `${randomX - 20}px`
-                paintBall.classList.add("dripAni")
-
-                // console.log(randomX)
-
-                context.beginPath()
-                context.strokeStyle = dripColor
-                context.lineWidth = trailWidth
-                context.lineCap = "round"
-
-                fadeOpacity = 1
-
-                trail()
-            }
-
-            function trail() {
-                readyForDrip = false
-
-                let ballYcoords = paintBall.getBoundingClientRect().top
-
-                context.globalAlpha = fadeOpacity
-                context.lineTo(randomX, ballYcoords + 20)
-                context.stroke()
-                trailUpdates -= 1
-
-                if (trailUpdates >= 1) {
-                    setTimeout(trail, 20)
-                }
-                else {
-                    paintBall.classList.remove("dripAni")
-
-                    fadeThatShit()
-                    
-                    function fadeThatShit() {
-                        context.globalAlpha = fadeOpacity
-
-                        context.clearRect(0, 0, bkCanvas.width, bkCanvas.height)
-                        context.fillStyle = "white"
-                        context.fillRect(0, 0, bkCanvas.width, bkCanvas.height)
-                        context.beginPath()
-                        context.moveTo(randomX, 0)
-                        context.strokeStyle = dripColor
-                        context.lineWidth = trailWidth
-                        context.lineCap = "round"
-                        context.lineTo(randomX, window.innerHeight)
-                        fadeOpacity -= 0.1
-                        context.stroke()
-
-                        if (fadeOpacity > 0) {
-                            setTimeout(fadeThatShit, 50)
-                        }
-                        else {
-                            context.clearRect(0, 0, bkCanvas.width, bkCanvas.height)
-                            context.fillStyle = "white"
-                            context.fillRect(0, 0, bkCanvas.width, bkCanvas.height)
-
-                            readyForDrip = true
-                        }
-                    }
-
-                }
-            }
+            setTimeout(test, 2000);
         }
+
+        test();
     </script>
-
-
-
-
-
-<!-- const canvas = document.getElementById("canvas")
-
-canvas.width = 500
-canvas.height = 500
-
-let context = canvas.getContext("2d")
-context.fillStyle = "white"
-context.fillRect(0, 0, canvas.width, canvas.height)
-
-let color = "black"
-let drawWidth = "100"
-let isDrawing = "false"
-
-function intMG() {
-    document.getElementById("bkMiniGame").style = `
-    z-index: 1;
-    opacity: 1;`
-
-    canvas.addEventListener("mousedown", start, false)
-    canvas.addEventListener("mousemove", draw, false)
-    canvas.addEventListener("mouseup", stopDrawing, false)
-}
-
-function start(event) {
-    is_drawing = true
-    context.beginPath()
-    context. moveTo(event.clientX - canvas.offsetLeft, event.clientY - canvas.offsetTop)
-    event.preventDefault()
-}
-
-function draw(event) {
-    if (is_drawing) {
-        context.lineTo(event.clientX - canvas.offsetLeft, event.clientY - canvas.offsetTop)
-        context.strokeStyle = color
-        context.lineWidth = draw_width
-        context.lineCap = "round"
-        context.lineJoin = "round"
-        context.stroke()
-    }
-    event.preventDefault()
-}
-
-function stopDrawing(event) {
-    if (is_drawing) {
-        context.stroke()
-        context.closePath()
-        is_drawing = false
-    }
-    event.preventDefault()
-}
-
-function checkFiled() {
-    const data = context.getImageData(0, 0, canvas.width, canvas.height).data
-
-    let filledPixels = 0
-
-    for (let i = 0; i < data.length; i += 4) {
-        if (data[i] !== 255 || data[i + 1] !== 255 || data[i + 2] !== 255) {
-            filledPixels += 1
-        }
-    }
-
-    const totalPixels = canvas.width * canvas.height
-    const filledPercentage = (filledPixels / totalPixels) * 100
-
-    console.log(`Filled Percentage: ${filledPercentage}%`)
-
-    document.getElementById("MGDisplayPrc").innerText = `Prosent fyllet: ${filledPercentage}%`
-    setTimeout(restartMG, 4000)
-
-    function restartMG() {
-        document.getElementById("bkMiniGame").style = `
-        z-index: -1;
-        opacity: 0%;`
-        context.clearRect(0, 0, canvas.width, canvas.height)
-        context.fillRect(0, 0, canvas.width, canvas.height)
-        document.getElementById("MGDisplayPrc").innerText = ""
-    }
-} -->
 </body>
 </html>
