added clickpaint and sell paint with percentage

--- a/testing.html
+++ b/testing.html
@@ -39,6 +39,8 @@
     </style>
 </head>
 <body>
+    <a href="index.html">back</a>
+
     <div style="width: 100px;">
         <div class="parabola" id="move"></div>
         <div class="clones-container"></div>
