--- a/testing.html
+++ b/testing.html
@@ -3,66 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clone Animation</title>
+    <title>Document</title>
     <style>
-        body{
-            overflow: hidden;
-        }
+        #basicHammer {
+    width: fit-content;
+}
 
-        .parabola {
-            width: 200px;
-            height: 300px;
-            top: 80px;
-            background-color: lightblue;
-            position: absolute;
-            border-radius: 50%;
-            animation: wave 10s ease-in-out infinite;
-        }
+    .toolTip {
+        position: absolute;
+        border-radius: 10px;
+        border: 4px solid black;
+        background-color: white;
+        text-align: center;
+        display: none;
+    }
 
-        .clones-container {
-            position: relative;
-        }
+    #basicHammer:hover .toolTip {
+        display: block;
+    }
 
-        .cloned-parabola {
-            position: absolute;
-            top: 80px; /* Set the desired vertical position */
-        }
-
-        @keyframes wave {
-            from {
-                margin-left: -100px;
-            }
-            to {
-                margin-left: 100%;
-            }
-        }
+    #basicMarketing:hover .toolTip {
+        display: block;
+    }
     </style>
 </head>
 <body>
-    <a href="index.html">back</a>
-
-    <div style="width: 100px;">
-        <div class="parabola" id="move"></div>
-        <div class="clones-container"></div>
+    <div id="basicHammer">
+        <button>Kjøp Basic Hammer (300kr)</button>
+        <div class="toolTip">+1 maling per click</div>
     </div>
-
-    <div style="width: 100%; background-color: lightblue; height: 100%; position: absolute; top: 100px;">.</div>
-
-    <script>
-        function test() {
-            const originalParabola = document.getElementById("move");
-            const clonesContainer = document.querySelector(".clones-container");
-
-            // Create a new cloned element
-            const clonedParabola = originalParabola.cloneNode(true);
-            clonedParabola.id = ""; // Remove the ID to avoid duplicate IDs
-            clonedParabola.classList.add("cloned-parabola"); // Add a class for styling
-            clonesContainer.appendChild(clonedParabola); // Append the cloned element to the container
-
-            setTimeout(test, 2000);
-        }
-
-        test();
-    </script>
+    <div id="basicMarketing">
+        <button>Kjøp basic marketing(500kr)</button>
+        <div class="toolTip">Bedre sjanse for salg</div>
+    </div>
 </body>
 </html>
