did some shit ig probably

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="miniGame">
             <p>Mal hele huset</p>
             <canvas id="canvas"></canvas>
-            <button style="margin-top: 10px;" onclick="checkFiled()">Done</button>
+            <button style="margin-top: 10px;" onclick="checkFilled()">Done</button>
         </div>
         <div id="finishMG">
             <p>Du malte <span id="MGDisplayPrc">error</span>%</p>
@@ -69,7 +69,7 @@
     </div>
 
     <div id="paintUpg">
-        <p>MALING BUSINESS UPGRADE</p>
+        <p>MALING BUSINESS UPGRADES</p>
         <div id="basicMalingMark" class="upgradeDiv">
             <button>Kjøp reklame (1250kr)</button>
             <div class="toolTip">Gir deg større sjanse for malings tilbud</div>
@@ -100,7 +100,12 @@
     </div>
 
     <div id="workersUpg">
-        .
+        <p>WOKERS UPGRADES</p>
+        <div class="upgradeDiv">
+            <button>Buy Basic Worker (1000kr)</button>
+            <div class="toolTip">Kjøp en worker som kan gjøre ting for deg</div>
+        </div>
+        
     </div>
 
     <div id="storageUpg">
