--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
         
     </div>
 
+<!-- -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_malingUpg(this, penger upg, minus tid, width)-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_- -->
+
+
     <div id="paintUpg">
         <p>MALING BUSINESS UPGRADES</p>
         <div id="basicMalingMark" class="upgradeDiv">
-            <button>Kjøp reklame (1250kr)</button>
+            <button onclick="malingUpg(this, 0.1, 0.1, 0)">Kjøp reklame (1250kr)</button>
             <div class="toolTip">Gir deg større sjanse for malings tilbud</div>
         </div>
     </div>
