actually fixed localstorage kinda not rly finished

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Du malte <span id="MGDisplayPrc">error</span>%</p>
             <p><span id="x">error</span> * <span id="y">error</span>% = <span id="xy">error</span></p>
             <p>Du tjente <span id="amountEarned">error</span>kr!</p>
-            <button onclick="restartMG()">Tilbake</button>
+            <button onclick="location.reload()">Tilbake</button>
         </div>
     </div>
 
@@ -101,6 +101,7 @@
             <button onclick="dripPaint()">test paint drip</button>
             <button onclick="intMG()">Mini Game</button>
             <button onclick="introPickColor()">Color Picker</button>
+            <button onclick="reset()">reset / localstorage clear</button>
         </div>
     </div>
 
