--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="darkBk">
         <div id="introColor">
-            <h1 style="color: white; font-size: 2rem;">VELG EN FARGE DU SKAL SELGE</h1>
+            <h1 style="color: white; font-size: 2rem;">VELG EN FARGE MALING DU SKAL SELGE</h1>
             <div id="colorPicker"></div>
             <button onclick="confirmColor()">confirm</button>
             <p id="errorColor"></p>
