started on workers

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <p>Du tjente <span id="amountEarned">error</span>kr!</p>
             <button onclick="restartMG()">Tilbake</button>
         </div>
+
+        <div id="changeWorker">
+            <p>Hva vil du at arbeideren skal gjøre</p>
+            <button>Lage maling</button>
+            <button>Kjøp pigment</button>
+        </div>
     </div>
 
     <main>
@@ -120,7 +126,7 @@
     <div id="workersUpg">
         <p>WOKERS UPGRADES</p>
         <div class="upgradeDiv">
-            <button onclick="">Buy Basic Worker (1000kr)</button>
+            <button onclick="changeWOrker()">Buy Basic Worker (1000kr)</button>
             <div class="toolTip">Kjøp en worker som kan gjøre ting for deg</div>
         </div>
         
