added working workers

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <div id="changeWorker">
             <p>Hva vil du at arbeideren skal gjøre</p>
-            <button>Lage maling</button>
-            <button>Kjøp pigment</button>
+            <button onclick="intWorker(0)">Lage maling</button>
+            <button onclick="intWorker(1)">Kjøp pigment</button>
         </div>
     </div>
 
